# mlops-E2E

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_mlflow.ipynb  02_mlflow_sqlite.ipynb
