[tool.poetry]
name = "mlops-e2e"
version = "0.1.0"
description = "MLOps E2E Demo"
authors = ["Hausdorff94"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "~2.8"
ipython = "^8.17"
jupyter = "^1.0"
ruff = "^0.0.272"
black = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# black 
line-length = 79
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
    ".env"
]

# flake8
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "N", "Q"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.mccabe]
max-complexity = 10